10.0.12.alpha.1 - 16th November 2022
- Removed 10.0.0 transitional code.

10.0.11 - 16th November 2022
- Updated for game version 10.0.2.46658.
- Fixed an issue with the flare keybindings not working.
- Due to problems with Blizzard's code in Dragonflight, setting an addon related keybind during combat using Blizzard's built-in game keybindings menu will give you a taint error.  This is nothing to do with addons but worth noting here since you may see the game blaming addons for the bug in the game code.  Set addon related keybinds out of combat for now.
- Added movies Raszageth the Storm-Eater (1) and Raszageth the Storm-Eater (2) (watch in Movies, listen in Various > Cinematics).
- Updated LibDBIcon and LibChatAnims.
- Added French translations.

10.0.10 - 9th November 2022
- For 'Enhance minimap' ('Interface'), repositioned instance difficulty banner slightly.
- Dragonflight includes a lot of API changes.  To make sure Leatrix Plus runs error-free, always use the latest release downloaded from CurseForge (app or website).  If you want to report an issue, there is a support link on leatrix.com.

10.0.09 - 8th November 2022
- Due to problems with Blizzard's code in Dragonflight, the '/ltp' slash command has been removed for the time being.  As a workaround, you can enter '/run leaplus()' to open Leatrix Plus.  If you want to pass a parameter, enter it in quotes between the brackets.  Example: /run leaplus("wipe").  This (hopefully temporary) change is necessary because of a bug in the game code with the slash command system.  Entering any addon related slash command will taint the UI and cause errors to show at some point.  Blizzard are aware of the bug.  When they fix it, the /ltp slash command will return.  You can assign a hotkey to open Leatrix Plus in the game keybindings panel and you can open Leatrix Plus using the minimap button if it's enabled in the Leatrix Plus settings menu so there are plenty of options.

10.0.08 - 7th November 2022